2002-05-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [debug]: add -DDEBUG_OS_ERROR on all
	platforms, do not add it on win32 when not debugging

2002-05-02  Sam Steingold  <sds@gnu.org>

	* io.d (read_token_1): permit input of multiply escaped illegal
	characters (bug fix)

2002-04-30  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 550528 ]: misleading error converting UTF-7
	* stream.d (saving_errno, error_saving_errno): new macros
	(iconv_mblen, iconv_mbstowcs, iconv_wcslen, iconv_wcstombs)
	(iconv_range, create_input_pipe, create_output_pipe)
	(create_io_pipe): use them

2002-04-28  Bruno Haible  <bruno@clisp.org>

	Split autoconf/aclocal.m4 into pieces.
	* m4/general.m4: New file.
	* m4/proto.m4: New file.
	* m4/cc-gcc.m4: New file.
	* m4/c++.m4: New file.
	* m4/cc-ansi.m4: New file.
	* m4/cc-cppaux.m4: New file.
	* m4/cc-elif.m4: New file.
	* m4/cc-error.m4: New file.
	* m4/cc-ema.m4: New file.
	* m4/cc-mergestrings.m4: New file.
	* m4/as-underscore.m4: New file.
	* m4/ranlib.m4: New file.
	* m4/install.m4: New file.
	* m4/cp.m4: New file.
	* m4/ln.m4: New file.
	* m4/x11.m4: New file.
	* m4/sys-irix.m4: New file.
	* m4/sys-dynix.m4: New file.
	* m4/socket.m4: New file.
	* m4/sh-args.m4: New file.
	* m4/cc-void.m4: New file.
	* m4/ffcall-pccstruct.m4: New file.
	* m4/ffcall-smallstruct.m4: New file.
	* m4/ffcall-ireg.m4: New file.
	* m4/longlong.m4: New file.
	* m4/longdouble.m4: New file.
	* m4/stdc-headers.m4: New file.
	* m4/offsetof.m4: New file.
	* m4/stdbool.m4: New file.
	* m4/locale.m4: New file.
	* m4/unistd.m4: New file.
	* m4/openflags.m4: New file.
	* m4/access.m4: New file.
	* m4/dir.m4: New file.
	* m4/utsname.m4: New file.
	* m4/netdb.m4: New file.
	* m4/shm.m4: New file.
	* m4/termios.m4: New file.
	* m4/caddr_t.m4: New file.
	* m4/socklen_t.m4: New file.
	* m4/structtm.m4: New file.
	* m4/strlen.m4: New file.
	* m4/memset.m4: New file.
	* m4/gmalloc.m4: New file.
	* m4/malloc.m4: New file.
	* m4/free.m4: New file.